<resources>
    <string name="app_name">Poems&amp;Poets</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_rus">Регистрация</string>
    <string name="entrance">Вход</string>
    <string name="title">Poems&amp;Poets</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="log_in_rus">Войти</string>
    <string name="log_in">Log In</string>
    <string name="registration">Registration</string>
    <string name="register">Зарегистрироваться</string>
    <string name="username">Имя пользователя</string>
    <string name="your_password">Ваш пароль</string>
    <string name="your_email">Ваш e-mail</string>
    <string name="my_works">Мои работы</string>
    <string name="out">Выйти</string>
    <string name="add_poem">Добавленные</string>
    <string name="poets">Стихи</string>
    <string name="profile">Профиль</string>
    <string name="poets_poems">Стихи поэтов</string>
    <string name="poets_users">Стихи пользователей</string>
    <string name="header_activity_add_poem">Добавить стих</string>
    <string name="input_genre">Напишите жанр</string>
    <string name="input_poem">Напишите стих</string>
    <string name="add">Добавить</string>
    <string name="input_title_poem">Введите название стиха</string>
    <string name="input_name_poet">Введите имя автора</string>
    <string name="input_username">Введите свой никнейм</string>
    <string name="add_my_poem">Хочу добавить свой стих</string>
    <string name="biography">Биография</string>
    <string name="add_status">Несколько слов о себе!</string>
    <string name="change_nickname">Надоел никнейм?</string>
    <string name="your_status">Ваш статус:</string>
    <string name="remove">Удалить</string>
    <string name="Change">Изменить</string>
    <string name="communication_with_you">Связь с вами:</string>
    <string name="empty" />
    <string name="info_for_all">Эта информация будет видна всем</string>
    <string name="my_poem">My Poem</string>
    <string name="my_job">My Job</string>
    <string name="change">Нажмите, чтобы изменить</string>
    <string name="enter_the_biography">Напиши биографию кратко и интересно!</string>
    <string name="communication">Связь:</string>
    <string name="add_info">Добавить\n данные</string>
    <string name="biography_title">Biography</string>
    <string name="what_are_you_thinking">О чем вы думаете?</string>
    <string name="no_internet">К сожалению, у вас отсуствует\n подключение к интернету</string>
    <string name="change_poem">Изменить</string>
    <string name="add_to_his">+ к себе</string>
    <string name="info_available">Информация отсуствует</string>
    <string name="ready">Готово!</string>
    <string name="change_poem_">Изменить стих</string>
    <string name="avatar">Аватар</string>
    <string name="quotation_marks">Кавычки</string>
    <string name="picture">Изображение</string>
    <string name="change_photo">Изменить фото</string>
    <string name="change_username">Изменить никнейм</string>
    <string name="like">Лайк</string>
    <string name="band">Полоса</string>
    <string name="specify_the_source">Обязательно указывайте источник!:)</string>
</resources>
