<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home_screen_purple">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/titleLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/g17575"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#EDE7F6"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEntrance"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonEntrance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDE7F6"
            android:fontFamily="@font/g4201"
            android:text="@string/log_in_rus"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextStyle"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextStyle"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="90dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewEntrance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>