<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home_screen_purple">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:indeterminateOnly="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/titleRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/g17575"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="#EDE7F6"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegistration"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EDE7F6"
            android:fontFamily="@font/g4201"
            android:text="@string/register"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editTextUsername"
        style="@style/EditTextStyle"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:foregroundGravity="center_vertical"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />


    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextStyle"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextStyle"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_marginBottom="90dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>